@@ -8,6 +8,7 @@ Bug reports and fixes from:
 
        Greg Badros
  Aleksandar Bakic
+        Per Bothner
      Marcus Daniels
        Fred Fish
    Jesse N. Glick
